added message create to services, altered views, added message detail model and service

--- a/AssessmentDuncanS.WebAPI/Views/Shared/_Layout.cshtml
+++ b/AssessmentDuncanS.WebAPI/Views/Shared/_Layout.cshtml
@@ -19,9 +19,16 @@
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
+            <!--Add navbar button for messages, authenticate login-->
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @if (User.Identity.IsAuthenticated)
+             
+                    {
+                    <li>@Html.ActionLink("Messages","Index", "Message"</li>
+
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
